--- a/GuestBook/GuestBook.csproj
+++ b/GuestBook/GuestBook.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Properties\PublishProfiles\GuestBook20170712021017 - Web Deploy.pubxml" />
+    <None Remove="Properties\PublishProfiles\GuestBookApplication - Web Deploy.pubxml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+    <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
